--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.5",
+    "recoil": "^0.7.4",
+    "recoil-persist": "^4.2.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2",
     "yup": "^0.32.11"
